Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
@@ -24,7 +24,7 @@ msgstr "—\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: \"Java and Taxes: Two Things That Are Certain in a Developer's Life\"\n"
@@ -34,12 +34,19 @@ msgid ""
 "author: jbeck\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: \"Java \"と \"税金\"。開発者の人生で確実な2つのこと\"\n"
+"date: 2021-06-22\n"
+"tags: user-story\n"
+"synopsis: Abraxas社が最先端の税務アプリにQuarkusを採用\n"
+"author: jbeck\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:12
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Abraxas Uses Quarkus For Cutting Edge Tax App"
-msgstr ""
+msgstr "Abraxasが最先端の税務アプリにQuarkusを採用"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:14
@@ -49,55 +56,63 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:17
+#, fuzzy
 msgid "Two things are certain in the life of a developer: Java and Taxes."
-msgstr ""
+msgstr "開発者の人生には2つの確かなことがあります。Javaと税金です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:19
+#, fuzzy
 msgid "For the past 25 years, Java has been the dominant framework for developers creating enterprise applications. During that same time, developers continue to support their respective communities and countries each pay period through taxes."
-msgstr ""
+msgstr "過去25年間、Javaはエンタープライズアプリケーションを作成する開発者にとって圧倒的なフレームワークとなっています。その間、開発者は税金を払って、それぞれのコミュニティや国を支え続けてきました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:21
+#, fuzzy
 msgid "What do Java and taxes have in common? Java, specifically Quarkus, is the backbone of a new and innovative tax solution developed by https://www.abraxas.ch/de[Abraxas Informatik AG] that is targeted to Swiss government tax agencies. Quarkus made developing the Java-based tax application exciting and innovative for the development team."
-msgstr ""
+msgstr "Javaと税金の共通点とは？Java、特にQuarkusは、 link:https://www.abraxas.ch/de[Abraxas Informatik AG]が開発したスイス政府の税務機関を対象とした新しく革新的な税務ソリューションのバックボーンとなっています。Quarkusによって、Javaベースの税務アプリケーションの開発は、開発チームにとってエキサイティングで革新的なものになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:23
+#, fuzzy
 msgid "Let’s learn a little more about how Quarkus turned the creation of a tax application into an exciting and rewarding project for it’s developers."
-msgstr ""
+msgstr "Quarkusがどのようにして税務アプリケーションの作成を、開発者にとってエキサイティングでやりがいのあるプロジェクトに変えたのか、もう少し詳しく見てみましょう。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The Challenge"
-msgstr ""
+msgstr "挑戦"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:26
+#, fuzzy
 msgid "Abraxas is the largest provider of integrated IT solutions for the public sector in Switzerland. They made a strategic decision to create a new modular, cloud-native tax solution that could be used throughout Switzerland’s cantons and municipalities to implement tax laws. Each canton and municipality has different rules and requirements for taxing its citizens which posed a unique challenge for the team."
-msgstr ""
+msgstr "Abraxas社は、スイスの公共部門向けに統合ITソリューションを提供する最大手の企業です。Abraxas社は、スイスのカントンや自治体が税法を施行する際に使用できる、モジュール式のクラウド・ネイティブな税務ソリューションを新たに開発するという戦略的な決断を下しました。各カントンや自治体は、市民への課税に関する規則や要件が異なるため、チームには独自の課題がありました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:28
+#, fuzzy
 msgid "Abraxas formed a specialized group of experts (Team Polaris) to architect, develop, and deploy the tax solution. While the Polaris team is a part of a larger organization, it acts very much like a startup. This provided the team with the ability to identify and implement the best technology for the job in order to meet the needs of their customers."
-msgstr ""
+msgstr "アブラクサスは、税務ソリューションを設計、開発、展開するために、専門家のグループ（チームポラリス）を結成しました。ポラリスチームは、大規模な組織の一部ではありますが、スタートアップに近い形で活動しています。このチームは、お客様のニーズを満たすために、最適なテクノロジーを見極め、導入することができました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:30
+#, fuzzy
 msgid "Abraxas is developing its products with a \"cloud first\" strategy where the tax application needs to be deployed in a clustered, scalable, secure environment that is browser-based. Abraxas was able to leverage its own cloud platform “Abraxas Government Cloud” which offers a Kubernetes-based cloud solution to its customers."
-msgstr ""
+msgstr "Abraxasは「クラウドファースト」戦略で製品を開発しており、税務アプリケーションはブラウザベースのクラスター化されたスケーラブルでセキュアな環境に展開される必要があります。Abraxasは、Kubernetesベースのクラウドソリューションを顧客に提供している自社のクラウドプラットフォーム「Abraxas Government Cloud」を活用することができました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:31
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "The Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:33
+#, fuzzy
 msgid "The tax application is cloud-native and flexible so that it can be used by different cantons and municipalities across the country. Quarkus was analyzed against other Java frameworks and platforms and selected to be the backbone for this application because of its performance, efficiency, and developer productivity in a Kubernetes environment."
-msgstr ""
+msgstr "この税務アプリケーションは、国内のさまざまなカントンや自治体で使用できるように、クラウドネイティブで柔軟性に富んでいます。Quarkusは、他のJavaフレームワークやプラットフォームと比較して分析され、パフォーマンス、効率性、Kubernetes環境での開発者の生産性が評価され、このアプリケーションのバックボーンとして選ばれました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:34
@@ -107,24 +122,27 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:36
+#, fuzzy
 msgid "Each customer, whether it be cantons or municipalities, has its own unique requirements and needs. Therefore, each customer has its own clustered Kubernetes environment that is configurable for their specific needs."
-msgstr ""
+msgstr "カントンやコミューンなどのお客様は、それぞれ独自の要件やニーズをお持ちです。そのため、お客様ごとにクラスター化されたKubernetes環境を用意し、それぞれのニーズに合わせて設定できるようにしています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:38
+#, fuzzy
 msgid "The tax application is based on a containerized microservices architecture with each service split up based on the business need. One advantage is that this allows the development team to easily replace a service with different business logic if needed."
-msgstr ""
+msgstr "税務アプリケーションは、コンテナ化されたマイクロサービスアーキテクチャをベースに、ビジネスニーズに応じて各サービスが分割されています。これにより、必要に応じて開発チームがサービスを異なるビジネスロジックに簡単に置き換えることができるという利点があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:40
+#, fuzzy
 msgid "Team Polaris provides a flexible distribution environment for each customer including the ability to deploy on private cloud (on-premise) or hosted cloud environments. The Abraxas platform team provisions the cloud infrastructure dependent upon the client requirements. The development teams have the ability to configure their customized environments and deploy their applications. The tax solution is currently in the development stage and is running in both a dev and staging environment with production rollout planned for 2022 with updates and enhancements coming soon after."
-msgstr ""
+msgstr "Team Polarisは、プライベートクラウド（オンプレミス）やホステッドクラウド環境での展開を含め、各顧客に柔軟な配信環境を提供しています。Abraxasのプラットフォームチームは、お客様の要件に応じてクラウドインフラストラクチャを準備します。開発チームは、カスタマイズされた環境を構成して、アプリケーションを展開することができます。税務ソリューションは現在、開発段階にあり、開発環境とステージング環境の両方で稼働しています。"
 
 #. type: Block title
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:41
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "A variety of Quarkus extensions are being utilized in the application including:"
-msgstr ""
+msgstr "このアプリケーションでは、以下のような様々なQuarkusの拡張機能が利用されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:43
@@ -133,53 +151,63 @@ msgstr "PostgreSQL"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:44
+#, fuzzy
 msgid "Hibernate/ORM"
-msgstr ""
+msgstr "ハイバーネート/ORM"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:45
+#, fuzzy
 msgid "Flyway"
-msgstr ""
+msgstr "フライウェイ"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:46
+#, fuzzy
 msgid "Cache"
-msgstr ""
+msgstr "キャッシュ"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:47
+#, fuzzy
 msgid "RESTEasy (Jackson)"
-msgstr ""
+msgstr "RESTEasy（ジャクソン"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:48
+#, fuzzy
 msgid "REST Client (Jackson)"
-msgstr ""
+msgstr "RESTクライアント（Jackson"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:49
+#, fuzzy
 msgid "Kafka (Reactive Messaging)"
-msgstr ""
+msgstr "Kafka（リアクティブ・メッセージング"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:50
+#, fuzzy
 msgid "Health"
-msgstr ""
+msgstr "健康"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:51
+#, fuzzy
 msgid "Metrics (Micrometer)"
-msgstr ""
+msgstr "指標（マイクロメートル"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:52
+#, fuzzy
 msgid "OpenAPI/Swagger"
-msgstr ""
+msgstr "OpenAPI/Swagger"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:53
+#, fuzzy
 msgid "OpenTracing"
-msgstr ""
+msgstr "OpenTracing"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:54
@@ -188,132 +216,150 @@ msgstr "スケジューラー"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:55
+#, fuzzy
 msgid "Fault Tolerance"
-msgstr ""
+msgstr "フォールトトレランス"
 
 #. type: Block title
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:56
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Additionally, the team also utilizes a number of Quarkus extensions for testing, including:"
-msgstr ""
+msgstr "さらに、チームはテスト用に以下のような多数のQuarkus拡張機能も活用しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:58
+#, fuzzy
 msgid "Junit5 + Mockito"
-msgstr ""
+msgstr "Junit5 + Mockito"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:59
+#, fuzzy
 msgid "Test H2"
-msgstr ""
+msgstr "テストH2"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:60
+#, fuzzy
 msgid "In-Memory Reactive Messaging"
-msgstr ""
+msgstr "インメモリ・リアクティブ・メッセージング"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:61
+#, fuzzy
 msgid "Jacoco"
-msgstr ""
+msgstr "ジャココ"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:62
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Why Quarkus?"
-msgstr ""
+msgstr "なぜQuarkusなのか？"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:64
+#, fuzzy
 msgid "Quarkus was chosen over alternatives such as Spring Boot, Micronaut and Helidon. While Spring is the predominant Java framework within Abraxas, the Polaris team chose Quarkus for a number of reasons including its superior performance in a Kubernetes environment."
-msgstr ""
+msgstr "Quarkusは、Spring Boot、Micronaut、Helidonなどの候補の中から選ばれました。AbraxasではSpringが主流のJavaフレームワークですが、Polarisチームは、Kubernetes環境での優れたパフォーマンスなど、多くの理由からQuarkusを選択しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:66
+#, fuzzy
 msgid "The team specifically highlighted Quarkus’ performance, vast extension ecosystem, native compilation, and developer productivity tools (live reloading, Dev UI) as contributing factors in the decision to utilize Quarkus."
-msgstr ""
+msgstr "チームは、Quarkusのパフォーマンス、広大な拡張エコシステム、ネイティブコンパイル、開発者の生産性向上のためのツール（ライブリロード、Dev UI）をQuarkusの採用を決定する要因として特に強調しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:68
+#, fuzzy
 msgid "The Polaris team was also impressed by the Quarkus community especially when compared to alternative communities because of its vibrant activity, release cadence, native compilation capability, and more."
-msgstr ""
+msgstr "また、Polarisチームは、Quarkusコミュニティの活発な活動、リリースケイデンス、ネイティブコンパイル機能など、他のコミュニティと比較して特にQuarkusコミュニティに感銘を受けました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:69
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Learning Curve"
-msgstr ""
+msgstr "学習曲線"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:71
+#, fuzzy
 msgid "What learning curve?"
-msgstr ""
+msgstr "どんな学習曲線？"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:73
+#, fuzzy
 msgid "Quarkus developers have continually commented how easy it is to understand the framework and create meaningful applications. Developers at Abraxas had the same experience but wanted to take things a step further. They created a custom “Hello, world!” application training project to make it easy for new developers on their team to learn how to implement Quarkus. The project includes PostgreSQL, Kafka and REST endpoints. New developers are typically up and running with the technology within 1-2 weeks which makes it easy to onboard new developers."
-msgstr ""
+msgstr "Quarkusの開発者は、フレームワークを理解して有意義なアプリケーションを作成するのがいかに簡単かということを常にコメントしています。Abraxasの開発者も同じ経験をしましたが、さらに一歩先に進みたいと考えていました。彼らは、チームの新しい開発者がQuarkusの導入方法を簡単に学べるように、カスタムの「Hello, world!このプロジェクトには、PostgreSQL、Kafka、RESTエンドポイントが含まれています。新しい開発者は通常1～2週間でこの技術を使いこなせるようになり、新しい開発者の受け入れが容易になりました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:74
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "What’s Next?"
-msgstr ""
+msgstr "What's Next?"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:76
+#, fuzzy
 msgid "While the first release of the application is slated for 2022, the application will continue far beyond that. Team Polaris is already looking for ways to improve performance, reliability, security, and scalability. This includes things like implementing a reactive architecture for microservices."
-msgstr ""
+msgstr "アプリケーションの最初のリリースは2022年を予定していますが、アプリケーションはそれよりもずっと先まで続きます。Team Polarisはすでに、パフォーマンス、信頼性、セキュリティ、スケーラビリティを向上させる方法を模索しています。これには、マイクロサービスのリアクティブアーキテクチャの実装などが含まれます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:78
+#, fuzzy
 msgid "From an organizational perspective, the Polaris team is hard at work transferring their Quarkus knowledge and experiences to other groups within the organization through things like internal TechTalks. One of their biggest challenges is overcoming the hesitancy to change to other Java frameworks which often requires a steep learning curve."
-msgstr ""
+msgstr "組織的な観点から見ると、Polarisチームは社内のTechTalksなどを通じて、Quarkusの知識や経験を組織内の他のグループに伝えることに懸命に取り組んでいます。彼らの最大の課題の1つは、急な学習曲線を必要とすることが多い他のJavaフレームワークへの変更をためらう気持ちを克服することです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:81
+#, fuzzy
 msgid "Bernhard Lutzmann, architect and backend software engineer on the Polaris project team, said it best: _“The learning curve for Quarkus was extremely short. Quarkus has a number of great resources including guides, blogs and a supportive community on Zulip.”_"
-msgstr ""
+msgstr "Polarisプロジェクトチームのアーキテクト兼バックエンドソフトウェアエンジニアであるBernhard Lutzmann氏は、このように述べています。 _\"Quarkusの学習曲線は極めて短いものでした。Quarkusには、ガイド、ブログ、Zulipのサポートコミュニティなど、数多くの素晴らしいリソースがあります。\"_"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:82
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Words of Wisdom"
-msgstr ""
+msgstr "名言集"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:84
+#, fuzzy
 msgid "The Polaris team has learned a lot so far on their application journey with Quarkus. They have some helpful advice to others who are considering using Quarkus."
-msgstr ""
+msgstr "Polarisチームは、Quarkusを使ったアプリケーションの旅でこれまでに多くのことを学びました。彼らは、Quarkusの使用を検討している他の人々に有益なアドバイスをしています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:86
+#, fuzzy
 msgid "_“Developers new to Quarkus often wonder why there are so few questions on Stack Overflow. This is because the main discussion between users and the Quarkus team happens on https://quarkusio.zulipchat.com/[Zulip]. Go there and you will quickly get answers to your questions, often by the Quarkus team directly.” - Bernhard Lutzmann_"
-msgstr ""
+msgstr "_\"Quarkusを初めて使う開発者は、Stack Overflowに質問が少ないことを不思議に思うことがよくあります。これは、ユーザーとQuarkusチームの間の主な議論が&lt;a href=\"https://quarkusio.zulipchat.com/\"&gt;Zulip&lt;/a&gt;_で行われているからです。そこに行けば、質問に対する回答がすぐに得られ、多くはQuarkusチームが直接回答しています。\"- Bernhard Lutzmann"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:88
+#, fuzzy
 msgid "_“When considering Quarkus’ native capability, make sure the libraries that you use are native compatible. The best approach is to stay with the core Quarkus extensions for as long as possible.” - Bernhard Lutzmann, Polaris project architect and backend software engineer_"
-msgstr ""
+msgstr "_\"Quarkusのネイティブ機能を検討する際には、使用するライブラリがネイティブに対応しているかどうかを確認してください。最良のアプローチは、できるだけ長くコアのQuarkus拡張機能を使い続けることです。\"- Polarisプロジェクトアーキテクト兼バックエンドソフトウェアエンジニア、Bernhard Lutzmann氏_"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:89
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Abraxas is Hiring"
-msgstr ""
+msgstr "アブラクサスが採用している"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:91
+#, fuzzy
 msgid "Good news for Java developers in Switzerland and beyond. Abraxas is hiring and looking to bring on new team members who are open-minded and not afraid to actively participate. Abraxas encourages its developers to spend time looking at other technologies. If you live in Switzerland or are considering moving there, have a look at their https://www.abraxas.ch/de/karriere/offenen-stellen[job offerings]."
-msgstr ""
+msgstr "スイスやその他の国のJava開発者に朗報です。アブラクサスでは、オープンマインドで積極的に参加することを恐れない新しいチームメンバーを採用したいと考えています。Abraxasは、開発者が他の技術に目を向けることに時間を費やすことを奨励しています。スイスにお住まいの方、またはスイスへの移住を検討されている方は、同社の link:https://www.abraxas.ch/de/karriere/offenen-stellen[求人情報]をご覧になってみてください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:92
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "About Abraxas"
-msgstr ""
+msgstr "アブラクサスについて"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:93
+#, fuzzy
 msgid "Abraxas Informatik AG is the largest provider of integrated IT solutions for the public sector in Switzerland. Abraxas connects Swiss administrations, authorities, companies and the population with efficient, secure and integrated solutions and services in the field of information and communication technology."
-msgstr ""
+msgstr "Abraxas Informatik AGは、スイスの公共部門に統合ITソリューションを提供する最大の企業です。Abraxasは、情報通信技術の分野で、効率的で安全な統合されたソリューションとサービスで、スイスの行政、当局、企業、国民を結びつけています。"
