--- a/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/opentelemetry.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-09 02:32+0000\n"
+"POT-Creation-Date: 2021-06-23 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -410,44 +410,228 @@ msgstr "`CTRL+C`  を叩いてアプリケーションを停止させます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/opentelemetry.adoc:213
+#, fuzzy, no-wrap
+#| msgid "Additional instrumentation"
+msgid "Additional configuration"
+msgstr "追加の計器"
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:216
+msgid "Some use cases will require custom configuration of OpenTelemetry.  These sections will outline what is necessary to properly configure it."
+msgstr ""
+
+#. type: Title ===
+#: upstream/_versions/main/guides/opentelemetry.adoc:217
+#, no-wrap
+msgid "ID Generator"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:220
+msgid "The OpenTelemetry extension will use by default a random https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/trace/sdk.md#id-generators[ID Generator] when creating the trace and span identifier."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:223
+msgid "Some vendor-specific protocols need a custom ID Generator, you can override the default one by creating a producer.  The OpenTelemetry extension will detect the `IdGenerator` CDI bean and will use it when configuring the tracer producer."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:228
+#: upstream/_versions/main/guides/opentelemetry.adoc:313
+#, no-wrap
+msgid ""
+"@Singleton\n"
+"public class CustomConfiguration {\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:236
+#, no-wrap
+msgid ""
+"    /** Creates a custom IdGenerator for OpenTelemetry */\n"
+"    @Produces\n"
+"    @Singleton\n"
+"    public IdGenerator idGenerator() {\n"
+"        return AwsXrayIdGenerator.getInstance();\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Title ===
+#: upstream/_versions/main/guides/opentelemetry.adoc:238
+#, no-wrap
+msgid "Propagators"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:241
+msgid "OpenTelemetry propagates cross-cutting concerns through https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/context/api-propagators.md[propagators] that will share an underlying `Context` for storing state and accesing data across the lifespan of a distributed transaction."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:244
+msgid "By default, the OpenTelemetry extension enables the https://www.w3.org/TR/trace-context/[W3C Trace Context] and the https://www.w3.org/TR/baggage/[W3C Baggage] propagators, you can however choose any of the supported OpenTelemetry propagators by setting the `propagators` config that is described in the <<configuration-reference>>."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_versions/main/guides/opentelemetry.adoc:249
+msgid "The `b3`, `b3multi`, `jaeger` and `ottrace` propagators will need the https://github.com/open-telemetry/opentelemetry-java/tree/main/extensions/trace-propagators[trace-propagators] extension to be added as a dependency to your project."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:256
+#, no-wrap
+msgid ""
+"<dependency>\n"
+"    <groupId>io.opentelemetry</groupId>\n"
+"    <artifactId>opentelemetry-extension-trace-propagators</artifactId>\n"
+"</dependency>\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:259
+msgid "The `xray` propagator will need the https://github.com/open-telemetry/opentelemetry-java/tree/main/extensions/aws[aws] extension to be added as a dependency to your project."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:265
+#, no-wrap
+msgid ""
+"<dependency>\n"
+"    <groupId>io.opentelemetry</groupId>\n"
+"    <artifactId>opentelemetry-extension-aws</artifactId>\n"
+"</dependency>\n"
+msgstr ""
+
+#. type: Title ===
+#: upstream/_versions/main/guides/opentelemetry.adoc:268
+#, no-wrap
+msgid "Resource"
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_versions/main/guides/opentelemetry.adoc:271
+msgid "A https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/overview.md#resources[resource] is a representation of the entity that is producing telemetry, it adds attributes to the exported trace to characterize who is producing the trace."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_versions/main/guides/opentelemetry.adoc:275
+msgid "You can add attributes by setting the `resource-attributes` tracer config that is described in the <<configuration-reference>>.  Since this property can be overridden at runtime, the OpenTelemetry extension will pick up its value following the order of precedence that is described in the xref:config-reference.adoc#configuration_sources[Quarkus Configuration Reference]."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_versions/main/guides/opentelemetry.adoc:278
+msgid "If by any means you need to use a custom resource or one that is provided by one of the https://github.com/open-telemetry/opentelemetry-java/tree/main/sdk-extensions[OpenTelemetry SDK Extensions] you can create multiple resource producers. The OpenTelemetry extension will detect the `Resource` CDI beans and will merge them when configuring the tracer producer."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:283
+#, no-wrap
+msgid ""
+"@ApplicationScoped\n"
+"public class CustomConfiguration {\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:289
+#, no-wrap
+msgid ""
+"    @Produces\n"
+"    @ApplicationScoped\n"
+"    public Resource osResource() {\n"
+"        return OsResource.get();\n"
+"    }\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:296
+#, no-wrap
+msgid ""
+"    @Produces\n"
+"    @ApplicationScoped\n"
+"    public Resource ecsResource() {\n"
+"        return EcsResource.get();\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Title ===
+#: upstream/_versions/main/guides/opentelemetry.adoc:298
+#, no-wrap
+msgid "Sampler"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:302
+msgid "A https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/trace/sdk.md#sampling[sampler] decides whether a trace should be sampled and exported, controlling noise and overhead by reducing the number of sample of traces collected and sent to the collector."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:305
+msgid "You can set a https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/trace/sdk.md#built-in-samplers[built-in sampler] simply by setting the desired sampler config described in the <<configuration-reference>>."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/opentelemetry.adoc:308
+msgid "If you need to use a custom sampler or to use one that is provided by one of the https://github.com/open-telemetry/opentelemetry-java/tree/main/sdk-extensions[OpenTelemetry SDK Extensions] you can create a sampler producer. The OpenTelemetry extension will detect the `Sampler` CDI bean and will use it when configuring the tracer producer."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/opentelemetry.adoc:323
+#, no-wrap
+msgid ""
+"    /** Creates a custom sampler for OpenTelemetry */\n"
+"    @Produces\n"
+"    @Singleton\n"
+"    public Sampler sampler() {\n"
+"        return JaegerRemoteSampler.builder()\n"
+"        .setServiceName(\"my-service\")\n"
+"        .build();\n"
+"    }\n"
+"}\n"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/opentelemetry.adoc:325
 #, no-wrap
 msgid "Additional instrumentation"
 msgstr "追加の計器"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/opentelemetry.adoc:217
+#: upstream/_versions/main/guides/opentelemetry.adoc:329
 msgid "Some Quarkus extensions will require additional code to ensure traces are propagated to subsequent execution.  These sections will outline what is necessary to propagate traces across process boundaries."
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/opentelemetry.adoc:219
+#: upstream/_versions/main/guides/opentelemetry.adoc:331
 msgid "The instrumentation documented in this section has been tested with Quarkus and works in both standard and native mode."
 msgstr "このセクションで説明されている計器は、Quarkusでテストされており、標準モードとネイティブモードの両方で動作します。"
 
 #. type: Title ===
-#: upstream/_versions/main/guides/opentelemetry.adoc:220
+#: upstream/_versions/main/guides/opentelemetry.adoc:332
 #, no-wrap
 msgid "SmallRye Reactive Messaging - Kafka"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/opentelemetry.adoc:224
+#: upstream/_versions/main/guides/opentelemetry.adoc:336
 msgid "When using the SmallRye Reactive Messaging extension for Kafka, we are able to propagate the span into the Kafka Record with:"
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/opentelemetry.adoc:228
+#: upstream/_versions/main/guides/opentelemetry.adoc:340
 #, no-wrap
 msgid "Metadata.of(TracingMetadata.withPrevious(Context.current()));\n"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/opentelemetry.adoc:232
+#: upstream/_versions/main/guides/opentelemetry.adoc:344
 msgid "The above creates a `Metadata` object we can add to the `Message` being produced, which retrieves the OpenTelemetry `Context` to extract the current span for propagation."
 msgstr ""
 
 #. type: Title ==
-#: upstream/_versions/main/guides/opentelemetry.adoc:234
+#: upstream/_versions/main/guides/opentelemetry.adoc:346
 #, no-wrap
 msgid "OpenTelemetry Configuration Reference"
 msgstr ""
