--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-18 02:26+0000\n"
+"POT-Creation-Date: 2021-06-23 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -683,7 +683,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
@@ -725,7 +725,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
@@ -1244,7 +1244,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
@@ -1286,7 +1286,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
