--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-hibernate-orm-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-orm-hibernate-orm-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-06-23 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,7 +59,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
@@ -149,7 +149,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
@@ -254,7 +254,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
@@ -296,7 +296,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`.\n"
+"Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.\n"
 "--"
 msgstr ""
 
