--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-18 02:25+0000\n"
+"POT-Creation-Date: 2021-06-23 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -65,7 +65,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The sampler to use for tracing \n"
+"The sampler to use for tracing. \n"
 " Valid values are `off, on, ratio`. \n"
 " Defaults to `on`.\n"
 "--"
@@ -109,7 +109,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"If the sampler to use for tracing is parent based \n"
+"If the sampler to use for tracing is parent based. \n"
 " Valid values are `true, false`. \n"
 " Defaults to `true`.\n"
 "--"
