--- a/l10n/po/ja_JP/_versions/main/guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/command-mode-reference.adoc.po
@@ -34,17 +34,17 @@ msgstr "このリファレンスでは、実行して終了するアプリケー
 #: upstream/_versions/main/guides/command-mode-reference.adoc:12
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/command-mode-reference.adoc:16
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/command-mode-reference.adoc:18
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/command-mode-reference.adoc:20
