--- a/l10n/po/ja_JP/_versions/main/guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-05 02:49+0000\n"
+"POT-Creation-Date: 2021-06-25 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -574,7 +574,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/getting-started-reactive.adoc:318
-msgid "The parameters passed to the application are described in the datasource guide.  There are other ways to configure the application - please check the xref:configuration-sources[configuration guide] to have an overview of the possibilities (such as env variable, .env files and so on)."
+msgid "The parameters passed to the application are described in the datasource guide.  There are other ways to configure the application - please check the link:config-reference#configuration_sources[configuration guide] to have an overview of the possibilities (such as env variable, .env files and so on)."
 msgstr ""
 
 #. type: Title ==
