--- a/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-22 13:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-06-25 16:43+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: \"Java and Taxes: Two Things That Are Certain in a Developer's Life\"\n"
@@ -44,7 +44,7 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:12
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Abraxas Uses Quarkus For Cutting Edge Tax App"
 msgstr "Abraxasが最先端の税務アプリにQuarkusを採用"
 
@@ -52,13 +52,12 @@ msgstr "Abraxasが最先端の税務アプリにQuarkusを採用"
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:14
 #, no-wrap
 msgid "abraxas.png"
-msgstr ""
+msgstr "abraxas.png"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:17
-#, fuzzy
 msgid "Two things are certain in the life of a developer: Java and Taxes."
-msgstr "開発者の人生には2つの確かなことがあります。Javaと税金です。"
+msgstr "開発者の人生には確かなことが2つあります。Javaと税金です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-abraxas-customer-story.adoc:19
