--- a/l10n/po/ja_JP/_posts/2021-06-22-calling-all-roadies.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-22-calling-all-roadies.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-21 23:03+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-06-25 16:53+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus World Tour - Calling All Roadies'\n"
@@ -35,18 +35,18 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus World Tour - Calling All Roadies'\n"
+"title: 'Quarkus World Tour - ローディーを大募集'\n"
 "date: 2021-06-22\n"
 "tags: announcement\n"
-"synopsis: クォークス・ワールド・ツアーはあなたの助けが必要です\n"
+"synopsis: Quarkus ワールド・ツアーはあなたの助けが必要です \n"
 "author: jbeck\n"
 "---\n"
 
 #. type: Title =
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:11
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Calling All Roadies for the Quarkus World Tour"
-msgstr "クォークス・ワールド・ツアーのローディーを大募集"
+msgstr "Quarkus ワールド・ツアーのローディーを大募集"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:13
@@ -56,73 +56,69 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:16
-#, fuzzy
 msgid "The https://quarkus.io/worldtour/[Quarkus World Tour] kicked off in March to provide a unique, hands-on Quarkus experience for Java developers across the globe. The goal of the tour is to introduce Quarkus to Java developers and set them down the path of creating applications and participating in the community."
 msgstr "link:https://quarkus.io/worldtour/[Quarkus World Tour]は、世界中のJava開発者にQuarkusのユニークな実地体験を提供するために、3月にスタートしました。このツアーの目的は、Java開発者にQuarkusを紹介し、アプリケーションの作成やコミュニティへの参加への道筋をつけることです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:18
-#, fuzzy
 msgid "Since the tour began, we have performed for crowds of developers from *15+* JUGs across the world with many more https://quarkus.io/worldtour/[tour stops] being added every day."
-msgstr "このツアーが始まって以来、私たちは世界中の *15以上の*JUGから集まった大勢の開発者を前にパフォーマンスを行ってきましたが、毎日多くの link:https://quarkus.io/worldtour/[ツアー会場]が追加されています。"
+msgstr "このツアーが始まって以来、私たちは世界中の *15以上の* JUGから集まった大勢の開発者を前にパフォーマンスを行ってきましたが、毎日多くの link:https://quarkus.io/worldtour/[ツアー会場]が追加されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Bands Make It “Rock”, Roadies Make It “Roll”"
-msgstr "バンドは \"ロック\"、ローディーは \"ロール\""
+msgstr "Bands Make It “Rock”, Roadies Make It “Roll”"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:21
-#, fuzzy
 msgid "A global world tour takes an entire community to ensure its success. We have a great group of roadies that have made the world tour a success so far but we need your help."
 msgstr "グローバルなワールドツアーを成功させるには、コミュニティ全体が必要です。これまでワールドツアーを成功させてきた素晴らしいローディたちがいますが、皆さんの協力が必要です。"
 
 #. type: Title ===
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:22
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Ways You Can Help"
 msgstr "協力できること"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:24
-#, fuzzy
 msgid "Much like a concert, we want each tour stop to be a unique experience for the audience. Each performer is encouraged to demo or talk about what they are passionate about with Quarkus. You *DO NOT* have to be an expert or know everything there is about Quarkus. The event organizer will work with you ahead of time to set the agenda and organize the demo setlist so you have time to prepare (see sample setlist below). It will be fun, we promise."
-msgstr "コンサートのように、それぞれのツアー先でお客様にユニークな体験をしていただきたいと思っています。各パフォーマーは、自分がQuarkusで情熱を傾けていることをデモしたり、話したりすることができます。専門家である必要はあり *ませ*んし、Quarkusのすべてを知っている必要もありません。イベント主催者は、事前に参加者と協力してアジェンダを設定し、デモのセットリストを作成しますので、準備に時間をかけることができます（下記のサンプルセットリストを参照）。楽しいイベントになることをお約束します。"
+msgstr "コンサートのように、それぞれのツアー先でお客様にユニークな体験をしていただきたいと思っています。各パフォーマーは、自分がQuarkusで情熱を傾けていることをデモしたり、話したりすることができます。専門家である必要はあり *ません* し、Quarkusのすべてを知っている必要もありません。イベント主催者は、事前に参加者と協力してアジェンダを設定し、デモのセットリストを作成しますので、準備に時間をかけることができます（下記のサンプルセットリストを参照）。楽しいイベントになることをお約束します。"
 
 #. type: Block title
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:25
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Performers are needed for the following roles:"
 msgstr "以下の役柄で出演者を募集しています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:27
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "*MC* (kick things off, transition between demos, monitor chat and questions, etc.)\n"
-msgstr "*MC*（キックオフ、デモの移行、チャットや質問のモニターなど"
+msgstr "*MC* （キックオフ、デモの移行、チャットや質問のモニターなど\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:28
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "*Presenter* (demo Quarkus feature/capability of your choosing)\n"
-msgstr "*プレゼンター*（任意のQuarkusの機能／性能をデモする"
+msgstr "*プレゼンター* （任意のQuarkusの機能／性能をデモする\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "*Q&A* (monitor chat and answer any questions behind the scenes or live)\n"
-msgstr "*Q&amp;amp;A（*チャットを監視し、舞台裏やライブで質問に答える"
+msgstr "*Q&A* （チャットを監視し、舞台裏やライブで質問に答える\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:30
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "*Organizer* (help arrange logistics, agenda, JUG communication, etc.)\n"
-msgstr "*オーガナイザー*（ロジスティックス、アジェンダ、JUGコミュニケーションなどの手配をお手伝いします。"
+msgstr "*オーガナイザー* （ロジスティックス、アジェンダ、JUGコミュニケーションなどの手配の手伝い）\n"
 
 #. type: Title ====
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Did we mention that you will get some pretty cool swag too?"
 msgstr "また、素敵なグッズがもらえることもお伝えしましたか？"
 
@@ -134,102 +130,87 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:37
-#, fuzzy
 msgid "https://forms.gle/qJi2eVq8sSc3xv2Z9[Sign Up] or send us an mailto:worldtour@quarkus.io[email] to help."
 msgstr "link:https://forms.gle/qJi2eVq8sSc3xv2Z9[サインアップ]、または link:mailto:worldtour@quarkus.io[メール]でお問い合わせください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:39
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Watch a World Tour Stop"
-msgstr "ワールド・ツアー・ストップを見る"
+msgstr "ワールド・ツアー・ストップを確認"
 
 #. type: Title ===
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:42
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Sample Setlist"
 msgstr "サンプルセットリスト"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:44
-#, fuzzy
 msgid "Here is an example setlist for a tour stop."
 msgstr "ここでは、あるツアーのセットリストの例をご紹介します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:46
-#, fuzzy
 msgid "Introduction to Quarkus (5-10 mins)"
 msgstr "Quarkusの紹介（5～10分"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:47
-#, fuzzy
 msgid "Set the stage, why Quarkus is relevant"
-msgstr "舞台設定、なぜQuarkusが必要なのか"
+msgstr "ステージ設定、なぜQuarkusが必要なのか"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:48
-#, fuzzy
 msgid "Demo 1 - Hello, World!"
 msgstr "デモ1 - Hello, World!"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:49
-#, fuzzy
 msgid "Demo 2 - Developer tooling & productivity"
 msgstr "デモ2 - デベロッパーツールと生産性"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:50
-#, fuzzy
 msgid "Demo 3 - JVM & Native performance stats"
-msgstr "デモ3 - JVMとNativeのパフォーマンス・スタッツ"
+msgstr "デモ3 - JVMとNativeのパフォーマンス統計"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:51
-#, fuzzy
 msgid "Take Requests - Open ended"
 msgstr "テイクリクエスト - オープンエンド"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:52
-#, fuzzy
 msgid "Remote dev"
-msgstr "リモートデバイス"
+msgstr "リモート開発"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:53
-#, fuzzy
 msgid "Automated deployment (Kubernetes/OpenShift)"
-msgstr "自動デプロイメント（Kubernetes/OpenShift"
+msgstr "自動デプロイメント（Kubernetes/OpenShift）"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:54
-#, fuzzy
 msgid "Metrics with Micrometer"
-msgstr "マイクロメーターによる測定"
+msgstr "マイクロメーターによるメトリクス"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:55
-#, fuzzy
 msgid "Swagger API w/ Developer UI"
-msgstr "Swagger API w/Developer UI"
+msgstr "Developer UI付のSwagger API"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:56
-#, fuzzy
 msgid "Reactive applications"
 msgstr "リアクティブ・アプリケーション"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:57
-#, fuzzy
 msgid "CRUD w/ Hibernate"
 msgstr "HibernateによるCRUD"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-22-calling-all-roadies.adoc:57
-#, fuzzy
 msgid "Single-command Kubernetes deployment"
-msgstr "シングルコマンドでのKubernetesのデプロイ"
+msgstr "シングルコマンドでのKubernetesへのデプロイ"
