Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1573,7 +1573,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc:819
 msgid "For example:"
-msgstr ""
+msgstr "例えば、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-search-orm-elasticsearch.adoc:824
