Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-23 02:17+0000\n"
+"POT-Creation-Date: 2021-06-30 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,13 +56,15 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:18
 #: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:39
 #: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:79
+#: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:90
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:21
-#: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:81
+#: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:82
+#: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:92
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -174,5 +176,19 @@ msgid ""
 "If the sampler to use for tracing is parent based. \n"
 " Valid values are `true, false`. \n"
 " Defaults to `true`.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry.adoc:89
+#, no-wrap
+msgid ""
+"[[quarkus-opentelemetry_quarkus.opentelemetry.tracer.suppress-non-application-uris]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.suppress-non-application-uris[quarkus.opentelemetry.tracer.suppress-non-application-uris]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Suppress non-application uris from trace collection. This will suppress tracing of `/q` endpoints. \n"
+" Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting. \n"
+" Suppressing non-application uris is enabled by default.\n"
 "--"
 msgstr ""
