--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-23 02:17+0000\n"
+"POT-Creation-Date: 2021-06-30 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -117,12 +117,28 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:48
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:59
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:50
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:51
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:61
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-opentelemetry-tracer-tracing-tracer-runtime-config.adoc:58
+#, no-wrap
+msgid ""
+"[[quarkus-opentelemetry-tracer-tracing-tracer-runtime-config_quarkus.opentelemetry.tracer.suppress-non-application-uris]]`link:#quarkus-opentelemetry-tracer-tracing-tracer-runtime-config_quarkus.opentelemetry.tracer.suppress-non-application-uris[quarkus.opentelemetry.tracer.suppress-non-application-uris]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Suppress non-application uris from trace collection. This will suppress tracing of `/q` endpoints. \n"
+" Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting. \n"
+" Suppressing non-application uris is enabled by default.\n"
+"--"
+msgstr ""
